Start on creating a layout for the new styles

--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -19,3 +19,22 @@ $cliBackground:             #E9ECFF;
 $breadcrumbDividerColor:    #91010b;
 $breadcrumbTextColor:       #343434;
 
+$topBarBackgroundColor:         #010101;
+$navBackgroundColor:            #343434;
+$navColumnBackgroundColor:      #030303;
+$belowNavColumnBackgroundColor: #f2f2f2;
+$contentColumnBackgroundColor:  white;
+
+$loginBackgroundColor:        #343434;
+$loginColor:                  #eaeaea;
+
+$signupLinkColor:             #aaa;
+$textDarkBackground:          white;
+$darkBackground:              #030303;
+$textLightBackground:         white;
+$lightBackground:             white;
+
+$ribbonColor:     #eb0011;
+$ribbonTextColor: white;
+$ribbonFoldColor: #91010b;
+
