--- a/site/app/views/layouts/styleguide.html.haml
+++ b/site/app/views/layouts/styleguide.html.haml
@@ -8,7 +8,7 @@
     = render "layouts/head" 
 
     -# CSS: implied media="all"
-    = stylesheet_link_tag '/app/stylesheets/bootstrap.css', :media => 'all'
+    = stylesheet_link_tag '/app/stylesheets/common.css', :media => 'all'
     -# moved into core scss = stylesheet_link_tag '/app/stylesheets/custom.css', :media => 'all'
     -# Append your own using content_for :stylesheets
     = yield :stylesheets
