--- a/site/app/stylesheets/_grid.scss
+++ b/site/app/stylesheets/_grid.scss
@@ -12,3 +12,14 @@
     padding-right: $gridGutterWidth;
   }
 }
+
+// For use in inlined elements in combination with existing padding
+.gutter { 
+  margin-left: $gridGutterWidth;
+}
+
+// Put content into a box with gutters compatible with the grid
+.box-content {
+  padding: 20px $gridGutterWidth;
+}
+
