--- a/site/app/views/layouts/site.html.haml
+++ b/site/app/views/layouts/site.html.haml
@@ -3,27 +3,26 @@
 
 !!! 5
 -# http://paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither
--ie_html :class => 'no-js console console-transition', :lang => 'en' do
+-ie_html :class => 'no-js', :lang => 'en' do
   %head
     = render "layouts/head"
     = render "layouts/site/stylesheets"
 
-  %body{ :class => "#{controller.controller_name} #{controller.action_name}" }
+  %body{ :class => "site #{controller.controller_name} #{controller.action_name}" }
     = outage_notification
 
     %header
-      = render 'layouts/simple/header'
-
-    = flashes
+      = render 'layouts/site/header'
 
     - if content_for?(:sub_layout) 
       = yield :sub_layout
     - else
       .container#content
+        = flashes
         = yield
 
     %footer
-      = render 'layouts/simple/footer'
+      = render 'layouts/site/footer'
 
     = render 'layouts/javascripts'
 
