--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -35,7 +35,7 @@
     .row
       = link_to "signup", :class => 'take-action span12' do
         .pull-right
-          Try it out >
+          Try it out
         %div
           Create your 
           %strong first three apps 
