--- a/site/app/views/styleguide/signup.html.haml
+++ b/site/app/views/styleguide/signup.html.haml
@@ -1,4 +1,6 @@
-= stylesheet_link_tag '/app/stylesheets/site.css', :media => 'all'
+- content_for :stylesheets do
+  = stylesheet_link_tag '/app/stylesheets/site.css', :media => 'all'
+
 %header
   #nav
     .navbar
