--- a/site/app/views/styleguide/community.html.haml
+++ b/site/app/views/styleguide/community.html.haml
@@ -42,7 +42,7 @@
             -# may need a block or three
             %ul.menu.nav.nav-pills.nav-stacked
               %li.leaf= link_to "Overview", "overview"
-              %li.expanded
+              %li.expanded.active
                 = link_to "Blogs", "blog"
                 %ul.menu.nav.nav-pills.nav-stacked
                   %li.first.last.leaf= link_to "Planet OpenShift", "planet"
