--- a/site/public/stylesheets/site.css
+++ b/site/public/stylesheets/site.css
@@ -540,9 +540,13 @@ h1.ribbon {
     line-height: 46px;
     text-transform: uppercase;
     margin-top: 15px; }
-  .column-nav > div > .menu {
+  .column-nav .nav-stacked {
     margin-left: -14px;
     margin-right: 14px; }
+  .column-nav .nav-pills .active > a,
+  .column-nav .nav-pills .active > a:hover {
+    background-color: #030303;
+    color: white; }
 
 @media (max-width: 767px) {
   .column-nav > div > ul > li {
@@ -553,16 +557,17 @@ h1.ribbon {
     display: none; } }
 
 /* Stacked navigations indent by 1 gutter each time */
-.nav-stacked .nav-stacked {
+.nav-stacked > li > .nav-stacked {
   margin-left: 14px;
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  margin-right: 0; }
 
 @media (min-width: 768px) and (max-width: 979px) {
-  .nav-stacked .nav-stacked {
+  .nav-stacked > li > .nav-stacked {
     margin-left: 10px; } }
 
 @media (min-width: 1200px) {
-  .nav-stacked .nav-stacked {
+  .nav-stacked > li > .nav-stacked {
     margin-left: 15px; } }
 
 .column-content {
