--- a/site/app/stylesheets/_variables.scss
+++ b/site/app/stylesheets/_variables.scss
@@ -12,6 +12,9 @@ $gridColumnWidthTablet:   42.5px; // 62 * 12 = 744 and 12px gutters
 $gridGutterWidthLarge:    30px;
 $gridColumnWidthLarge:    60px;
 
+$logoHeight:      90px;
+$logoWidth:       90px;
+$logoSeparation:  10px;
 
 $cliText:                   #000C5A;
 $cliBackground:             #E9ECFF;
