Use relative links in CSS

--- a/site/app/stylesheets/_navbar.scss
+++ b/site/app/stylesheets/_navbar.scss
@@ -7,7 +7,7 @@
     text-align: center;
     text-transform: uppercase;
     position: relative;
-    background: url('/app/images/logo-medium.png') center top no-repeat transparent;
+    background: url('../images/logo-medium.png') center top no-repeat transparent;
     /* reset styles */
     float: none;
     margin: 0;
