--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -28,7 +28,7 @@
       .container
         .primary
           Develop and Scale 
-          %strong#technology-rotate Java
+          %strong#technology-rotate Apps
           in the Cloud
         .secondary OpenShift is a free, auto-scaling platform as a service for web applications.  It streamlines the application life cycle so developers can focus on their users, customers, and code.
 
