move wizard_create helper to app_wizard_create and add cartridge wizard

--- a/site/app/views/application_types/index.html.haml
+++ b/site/app/views/application_types/index.html.haml
@@ -6,7 +6,7 @@
   .application_type > ul.meta > li > label {display: inline;}
 
 %h1.invisible Create a New Application
-= wizard_steps_create 0
+= app_wizard_steps_create 0
 -#%p Get started by choosing what kind of application you want to create.  Use the search box to filter the list of types or click on a category in the drop down to narrow down your choice.
 %p
   Choose a web programming framework for your application. After you create the application you can add
