--- a/site/app/views/applications/get_started.html.haml
+++ b/site/app/views/applications/get_started.html.haml
@@ -1,5 +1,5 @@
 - if @wizard
-  = wizard_steps_create 2, :completed => true
+  = app_wizard_steps_create 2, :completed => true
   %h1.invisible Get Started
   %p Your application has been created. If you're new to OpenShift check out these tips for where to go next.
 
