--- a/site/app/views/applications/get_started.html.haml
+++ b/site/app/views/applications/get_started.html.haml
@@ -98,6 +98,9 @@
     -# cartridges
     %h2 Adding capabilities
     %p
+      You may now
+      = link_to'add cartridges to provide extra functionality for your application.', application_cartridge_types_path(@application.name)
+    %p
       Cartridges are the components of an OpenShift application, and include databases, build systems,
       and management capabilities. Adding a cartridge to an application provides the desired capability
       without forcing you to administrate or update that feature. 
@@ -115,7 +118,7 @@
         :escaped
           rhc app cartridge list
     %p
-      To add a cartridge to your application, run
+      You may also add a cartridge to your application by running
     %pre.cli
       = preserve do
         :escaped
