Proto help page

--- a/site/app/views/layouts/console/_footer.html.haml
+++ b/site/app/views/layouts/console/_footer.html.haml
@@ -15,7 +15,7 @@
         %ul.unstyled
           %li= link_to 'Forum', 'https://www.redhat.com/openshift/forums/'
           %li= link_to 'Partner Program', partners_path
-          %li= link_to 'IRC Channel', 'http://webchat.freenode.net/?randomnick=1&channels=openshift&uio=d4'
+          %li= link_to 'IRC Channel', irc_web_url
           %li= link_to 'Feedback', 'mailto:openshift@redhat.com'
 
       .span3.link-column
