--- a/site/app/views/layouts/console/_header.html.haml
+++ b/site/app/views/layouts/console/_header.html.haml
@@ -20,6 +20,7 @@
         = navigation_tabs do
           = navigation_tab :applications, :action => :index, :name => "My Applications"
           = navigation_tab :application_types, :name => "Create a New Application"
+          = navigation_tab :console, :action => :help, :name => "Help"
           -#= navigation_tab :help, :show
           -#= navigation_tab :user, :action => :show
 
