--- a/site/app/views/applications/index.html.haml
+++ b/site/app/views/applications/index.html.haml
@@ -39,31 +39,20 @@
               = link_to application.web_url, application.web_url
             %li.span2
               %a.pull-right.btn{:href => "#{application_path(application)}"} Details
+
   %section#account-digest.span4
     #assistance
       %h5 OpenShift Express Help
       %ul.unstyled
-        %li 
-          %a{:href => user_guide, :target => '_blank'} OpenShift Express User Guide
-        %li 
-          %a{:href => install_cli_knowledge_base_url, :target => '_blank'} Installing OpenShift Express client tools on Mac OSX, Linux, and Windows
-        %li 
-          %a{:href => rails_quickstart_guide, :target => '_blank'} Ruby on Rails Express Quickstart Guide
-        %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/kb/kb-e1018-how-can-i-add-jboss-modules-to-an-express-app', :target => '_blank'} How can I add JBoss modules to an Express App
-        %li 
-          %a{:href => sync_git_with_remote_repo_knowledge_base_url, :target => '_blank'} Sync your OpenShift repo with an existing Git repo
-        %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/', :target => '_blank'} More help »
-          
+        - console_help_links.each do |l|
+          %li= link_to l[:name], l[:href]
+        %li= link_to 'More help »', console_help_path
+
       %h5 Popular FAQs
       %ul.unstyled
-        %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/faq/how-do-i-start-a-new-forum-discussion', :target => '_blank'} How do I start a new Forum discussion?
-        %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/faq/how-do-i-install-the-rhc-client-tools-on-windows', :target => '_blank'} How do I install the rhc client tools on Windows?
-        %li 
-          %a{:href => 'https://www.redhat.com/openshift/community/faq', :target => '_blank'} More FAQs »
+        - console_faq_links.each do |l|
+          %li= link_to l[:name], l[:href]
+        %li= link_to 'More FAQs »', faq_url
   -#
     %header.invisible Billing, usage and charts
     %table.table.table-striped.table-condensed
