--- a/site/app/views/layouts/console/_footer.html.haml
+++ b/site/app/views/layouts/console/_footer.html.haml
@@ -6,17 +6,17 @@
           %h3 News
         %ul.unstyled
           %li= link_to 'Announcements', 'https://www.redhat.com/openshift/forums/news-and-announcements'
-          %li= link_to 'Blog', 'https://www.redhat.com/openshift/blogs'
-          %li= link_to 'Twitter', 'http://www.twitter.com/#!/openshift'
+          %li= link_to 'Blog', openshift_blog_url
+          %li= link_to 'Twitter', openshift_twitter_url
 
       .span3.link-column
         %header
           %h3 Community
         %ul.unstyled
-          %li= link_to 'Forum', 'https://www.redhat.com/openshift/forums/'
+          %li= link_to 'Forum', forums_url
           %li= link_to 'Partner Program', partners_path
           %li= link_to 'IRC Channel', irc_web_url
-          %li= link_to 'Feedback', 'mailto:openshift@redhat.com'
+          %li= link_to 'Feedback', mailto_openshift_url
 
       .span3.link-column
         %header
@@ -30,7 +30,7 @@
         %header
           %h3 Help
         %ul.unstyled
-          %li= link_to 'FAQ', 'http://www.redhat.com/openshift/faq'
+          %li= link_to 'FAQ', faq_url 
           %li= link_to 'Contact', 'mailto:openshift@redhat.com'
 
 %section#copyright
