--- a/site/app/views/console/help.html.haml
+++ b/site/app/views/console/help.html.haml
@@ -1,4 +1,4 @@
-%section.row
+%section.row.row-help
   .span3
     %h2 Create
     %p Just starting with OpenShift?
@@ -21,7 +21,7 @@
     %h2 Troubleshoot
     %p When you hit a bump in the road
     %p Our #{link_to 'community forums', forums_url} are watched round the clock by an army of developers, evangelists, and OpenShift devotees.
-    %form.form-search{:method => 'get', :action => 'https://www.redhat.com/openshift/community/search/node'}
+    %form.form-search{:method => 'get', :action => community_search_url}
       %input.input-medium.search-query{:name => 'keys', :placeholder => 'Search the forums'}
       -#%input.btn{:type => 'submit', :value => 'Search'}
     %p Check out the #{link_to 'Knowledge Base', knowledge_base_url} for known headaches and #{link_to 'FAQ', faq_url} for more general questions
