get cart list from rest api but fill in details in the model
* right now the rest api only gives us a list of the names of the
  cartridges.
* fill in the details until backend supports API for getting
  metadata for each cart

--- a/site/app/views/cartridge_types/_cartridge_type.html.haml
+++ b/site/app/views/cartridge_types/_cartridge_type.html.haml
@@ -26,7 +26,8 @@
           %label Version:
           %span= cartridge_type.version
 
-  %p= cartridge_type.description
+  - if cartridge_type.description
+    %p= cartridge_type.description
 
   - if cartridge_type.learn_more_url
     = link_to "Learn more", cartridge_type.learn_more_url
