--- a/site/app/views/console/help.html.haml
+++ b/site/app/views/console/help.html.haml
@@ -1,7 +1,43 @@
+:css
+  .row-help a { font-weight: bold; }
+-#:css
+  .row-help > .span3 {
+    position: relative;
+  }
+  .row-help > .span3 > h2:after {
+    content: ' ';
+    position: absolute;
+    right: -10px;
+    top: 0;
+    border-color: transparent #C83423;
+    border-style: solid;
+    border-width: 0 0 36px 10px;
+  }
+  .row-help > .span3 > h2:before {
+    content: ' ';
+    position: absolute;
+    left: -18px;
+    top: 0;
+    width: 10px;
+    border-color: #C83423 transparent;
+    border-style: solid;
+    border-width: 0 0 36px 10px;
+  }
+  .row-help > .span3 > h2 {
+    border-color: #C83423;
+    background-color: #C83423;
+  }
+  .row-help > .span3:first-child > h2:before {
+    border-left: 10px;
+    left: -10px;
+    border-color: #C83423;
+  }
+
 %section.row.row-help
   .span3
     %h2 Create
-    %p Just starting with OpenShift?
+    %p
+      %strong Just starting with OpenShift?
     %p Get your first application up off the ground through the #{link_to 'app creation wizard', application_types_path}.
     %p If you prefer the command line, #{link_to 'our Quickstart page', quickstart_path} will help you install the client tools, create your application, and make your first change.
     %p 
@@ -12,14 +48,16 @@
 
   .span3
     %h2 Learn
-    %p Want to explore our platform?
+    %p 
+      %strong Want to explore our platform?
     %p #{link_to 'The User Guide', user_guide_url} is the first destination for new developers and is our most-accessible reference.
     %p Our technology highlight pages bring together what you need to know - #{link_to 'JBoss', jboss_resources_url} and #{link_to 'MongoDB', mongodb_resources_url} are up now, with more to come.
     %p For some great technology dives #{link_to 'see our Videos page', videos_url}. Some of our favorites are below.
 
   .span3
     %h2 Troubleshoot
-    %p When you hit a bump in the road
+    %p 
+      %strong Hit a bump in the road?
     %p Our #{link_to 'community forums', forums_url} are watched round the clock by an army of developers, evangelists, and OpenShift devotees.
     %form.form-search{:method => 'get', :action => community_search_url}
       %input.input-medium.search-query{:name => 'keys', :placeholder => 'Search the forums'}
@@ -29,7 +67,9 @@
 
   .span3
     %h2 Engage
-    %p The OpenShift newsletter is a great way to track the latest news. #{link_to 'Subscribe today.', newsletter_signup_url, :class => 'btn btn-success'}
+    %p 
+      %strong Need to know what's new?
+    %p The OpenShift newsletter is a great way to track the latest news. #{link_to 'Subscribe today', newsletter_signup_url, :class => 'btn btn-success'}
     %p Follow us on Twitter at #{link_to '#openshift', openshift_twitter_url} or read the #{link_to 'OpenShift blog', openshift_blog_url}.
     %p If you've found a real humdinger of a problem with the console, site, or community - #{link_to 'file a bug', open_bug_url, :target => '_blank' } and we'll try to make it right.
 
