--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -197,6 +197,11 @@ body.signup {
     background-color: $ribbonFoldColor;
     padding-right: $gridGutterWidth + 12px;
     background: url('../images/arrow-large.gif') 87% center no-repeat $ribbonFoldColor;
+    -moz-transition: background-position 0.2s;
+  }
+
+  &:hover > .pull-right {
+    background-position: 89% center;
   }
 }
 #learn .take-action { margin-top: -37px; margin-bottom: 20px; }
