Update tabs, update header

--- a/site/app/views/layouts/site/_header.html.haml
+++ b/site/app/views/layouts/site/_header.html.haml
@@ -13,14 +13,16 @@
     .container
       -# Was .nav-collapse, has some issues
       = link_to root_path, :class => 'brand' do
-        %strong> Open
-        Shift
-      %ul.nav
-        %li.active= link_to "Overview", product_overview_path
-        %li= link_to "Express", express_path
-        %li.divider &nbsp;
-        %li= link_to "Flex", flex_path
-        %li= link_to "Community", community_url
+        .brand-image
+        .brand-text
+          %strong> Open
+          Shift
+    %ul.nav
+      %li.active= link_to "Learn More", product_overview_path
+      %li= link_to "Express", express_path
+      %li.divider &nbsp;
+      %li= link_to "Flex", flex_path
+      %li= link_to "Community", community_url
 
-  - if content_for? :header
-    = yield :header
+- if content_for? :header
+  = yield :header
