--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -21,7 +21,7 @@
               %strong> Open
               Shift
         %ul.nav
-          %li.active= link_to "Overview", "."
+          %li.active= link_to "Learn More", "."
           %li= link_to "Documentation", "dev_center"
           %li.divider &nbsp;
           %li= link_to "Console", "console"
