search block modifications

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -118,3 +118,29 @@ html.js fieldset.collapsible legend a {
 html.js fieldset.collapsible .fieldset-wrapper {
     overflow: auto;
 }
+
+/* side column */
+.sidenav-column-inner {
+  margin-right: 15px;
+}
+#search-field {
+  position: relative;
+  text-align: right;
+}
+button.search {
+  background: transparent url("../images/sprite-vert.png") 4px -170px no-repeat;
+  height: 25px;
+  width: 20px;
+  border: 0;
+  position: absolute;
+  right: 5px;
+  top: 1px;
+}
+.search-query {
+  margin-bottom: 0;
+  border-radius: 5px;
+  width: -moz-available;
+  width: inherit;
+  padding-left: 5px;
+  padding-right: 25px;
+}
