Add badges and some generic cleanup to comments

--- a/site/app/stylesheets/_community.scss
+++ b/site/app/stylesheets/_community.scss
@@ -62,7 +62,20 @@
   }
 }
 
-.comment { margin-bottom: 20px; padding-top: 8px; border-top: 1px solid #ddd; }
+.comment { 
+  margin-bottom: 20px; 
+  padding-top: 8px; 
+  border-top: 1px solid #ddd; 
+
+  .submitted {
+    margin-top: 10px;
+    font-style: italic;
+  }
+
+  .links.btn-group {
+    margin-top: 10px;
+  }
+}
 .comment > table td { vertical-align: top; }
 .comment .comment-author {
   .views-row {
@@ -71,18 +84,28 @@
     margin-right: 10px;
     margin-top: 5px;
     background-color: rgb(239, 239, 239);
-    &:hover .views-field-value { height: 100%; }
-    &:hover .views-field-phpcode:after { content: none; }
   }
   .views-field-phpcode {
     clear: both;
-    &:after { content: '...'; }
   }
   .views-field-value {
-    height: 0px;
-    overflow: hidden;
+    font-style: italic;
+    margin-top: 5px;
   }
 }
+
+.view-user-profile-box .badge { 
+  display: inline-block; 
+  padding: 0 3px;
+  color: #fff; 
+  text-transform: uppercase; 
+  font-size: 11px; 
+}
+.badge.newbie { background-color: #89aa00; }
+.badge.member { background-color: #fc6b00; }
+.badge.accomplished { background-color: #191919; }
+.badge.pro { background-color: #356fce; }
+.badge.expert { background-color: #a80f00; }
 
 /* copied from system.css */
 html.js fieldset.collapsed {
