Add headline marker class to primary messaging

--- a/site/app/stylesheets/site.scss
+++ b/site/app/stylesheets/site.scss
@@ -344,6 +344,7 @@ h1.ribbon {
   h3 > a { 
     color: white; 
     text-transform: uppercase; 
+    font-weight: bold;
   }
   .nav-location {
     font-size: 19px;
