--- a/site/app/views/home/index.html.haml
+++ b/site/app/views/home/index.html.haml
@@ -3,7 +3,7 @@
 - content_for :header do
   .messaging.messaging-home
     .container
-      .primary
+      .primary.headline
         Develop and Scale 
         %strong#technology-rotate Apps
         in the Cloud
