--- a/site/app/views/styleguide/community.html.haml
+++ b/site/app/views/styleguide/community.html.haml
@@ -29,7 +29,7 @@
 
     .messaging
       .container
-        .primary 
+        .primary.headline
           Join the 
           %strong OpenShift Community
         .secondary This is the place to learn and engage with OpenShift users and developers. Sign in to participate.
