--- a/site/app/views/styleguide/home.html.haml
+++ b/site/app/views/styleguide/home.html.haml
@@ -29,7 +29,7 @@
 
     .messaging.messaging-home
       .container
-        .primary
+        .primary.headline
           Develop and Scale 
           %strong#technology-rotate Apps
           in the Cloud
