--- a/site/public/stylesheets/site.css
+++ b/site/public/stylesheets/site.css
@@ -299,6 +299,31 @@ html.js fieldset.collapsible legend a {
 html.js fieldset.collapsible .fieldset-wrapper {
   overflow: auto; }
 
+/* side column */
+.sidenav-column-inner {
+  margin-right: 15px; }
+
+#search-field {
+  position: relative;
+  text-align: right; }
+
+button.search {
+  background: transparent url("../images/sprite-vert.png") 4px -170px no-repeat;
+  height: 25px;
+  width: 20px;
+  border: 0;
+  position: absolute;
+  right: 5px;
+  top: 1px; }
+
+.search-query {
+  margin-bottom: 0;
+  border-radius: 5px;
+  width: -moz-available;
+  width: inherit;
+  padding-left: 5px;
+  padding-right: 25px; }
+
 /* move into core when the branding converges */
 a {
   color: #91010b; }
@@ -574,7 +599,8 @@ h1.ribbon {
   .column-nav h3,
   .column-nav h3 > a {
     color: white;
-    text-transform: uppercase; }
+    text-transform: uppercase;
+    font-weight: bold; }
   .column-nav .nav-location {
     font-size: 19px;
     line-height: 46px;
